# Anantum

./: .gitignore  README.md  requirements.txt
anantum/: agent_brain.py  intent_classifier.py  llm_manager.py  main.py  memory_system.py  tools.py
voice-assistant-v2/: .env.example  .gitignore  PACKAGING.md  README.md  backend_launcher.py  main.py
voice-assistant-v2/bridge/: __init__.py  server.py  stdio_bridge.py
voice-assistant-v2/celestial/: __init__.py  executor.py  planner.py
voice-assistant-v2/config/: settings.py  user_settings.py
voice-assistant-v2/core/: __init__.py  agent.py  assistant.py  context_builder.py  intent_detector.py  llm_manager.py  tts_stream.py
voice-assistant-v2/frontend/: index.html  package-lock.json  package.json  script.js  styles.css
voice-assistant-v2/frontend/src-tauri/: Cargo.toml  tauri.conf.json
voice-assistant-v2/frontend/src-tauri/capabilities/: default.json
voice-assistant-v2/frontend/src-tauri/src/: lib.rs  main.rs
voice-assistant-v2/installer/: Anantum.iss
voice-assistant-v2/memory/: cold_archive.py  faiss_store.py  hot_cache.py  memory_manager.py  summarizer.py
voice-assistant-v2/prompts/: celestial_prompt.txt  system_prompt.txt
voice-assistant-v2/scripts/: build_backend.ps1  build_frontend.ps1  build_installer.ps1  preflight.ps1
voice-assistant-v2/skills/: __init__.py  base.py  calculator.py  notes.py  system_info.py  time_date.py  timers.py  weather.py  web_search.py
voice-assistant-v2/voice/: __init__.py  base.py  stt.py  tts.py  wake_word.py
