[package]
name = "anantum_siri_widget"
version = "0.1.0"
description = "Floating Siri-style frontend for Anantum"
authors = ["Anantum"]
edition = "2021"

[lib]
name = "anantum_siri_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
log = "0.4"
